--- a/SignIn-Consumer/consumer-signin.css
+++ b/SignIn-Consumer/consumer-signin.css
@@ -1,6 +1,6 @@
 html, body{
 width: 100% !important;
-overflow:hidden !important;
+overflow-x:hidden !important;
 font-family: 'Roboto', sans-serif;
 background:url(img/fruits.jpg) no-repeat center center fixed; 
 -webkit-background-size: cover;
@@ -50,3 +50,59 @@ background-color: rgba(255,255,255,0.97);
    .input-field .prefix.active {
      color: #000;
    }
+@media only screen and (max-width: 425px){
+html, body{
+	background:none;
+	background-color: #f7f7f7;
+	overflow-y: auto !important;
+}
+.form{
+    position: absolute;
+    top: 5%;
+    left: 4%;
+    width: 28em;
+    height: auto;
+    margin-top: auto;
+    margin-left: 0em;
+    border: 1px solid #dadce0;
+    padding: 25px 0px 5px 0px;
+    border-radius: 10px;
+}
+}
+@media only screen and (max-width: 375px) {
+html, body{
+	background:none;
+	background-color: #f7f7f7;
+}
+.form{
+    position: absolute;
+    top: 3%;
+    left: 1%;
+    width: 26em;
+    height: auto;
+    margin-top: auto;
+    margin-left: 0em;
+    border: 1px solid #dadce0;
+    padding: 25px 0px 5px 0px;
+    border-radius: 10px;
+}
+}
+@media only screen and (max-width: 320px) {
+html, body{
+	background:none;
+	background-color: #f7f7f7;
+	overflow-y: auto !important;
+}
+.form{
+    position: absolute;
+    top: 4%;
+    left: 2%;
+    width: 22em;
+    height: auto;
+    margin-top: auto;
+    margin-left: 0em;
+    border: 1px solid #dadce0;
+    padding: 25px 0px 5px 0px;
+    border-radius: 10px;
+}
+}
