--- a/Admin-Add_Product/adminpost.css
+++ b/Admin-Add_Product/adminpost.css
@@ -119,6 +119,52 @@ color: #000;
 .checkpoint{
 	font-family: 'Roboto', sans-serif;
 }
+#progress-bar{
+/* margin-left:16px; */
+margin-right: 0px;
+}
+.bull{
+	border: 2px solid #ff8c00;
+	height: 32px;
+	width: 30px;
+	border-radius: 100%;
+	color: #ff8c00;
+	display: inline-block;
+	position: relative;
+	line-height:20px;
+	text-align:  center;
+	padding-top: 3px;
+	justify-content: space-between;
+		
+}
+#qty-checkpoint{
+	margin-left:0px;
+	margin-bottom: 5px;
+}
+#price-checkpoint{
+	margin-left:0px;
+	margin-bottom: 5px;
+}
+#label-price1, #label-qty1{
+	position: relative;
+	/* left: 95% ; */
+}
+#label-price2, #label-qty2{
+	position: relative;
+	/* left: 92% ; */
+}
+#label-price3, #label-qty3{
+	position: relative;
+	/* left: 88.99% ; */
+}
+#label-price4, #label-qty4{
+	position: relative;
+	/* left: 85% ; */
+}
+#label-price5, #label-qty5{
+	position: relative;
+	/* left: 81% ; */
+}
 @media only screen and (max-width: 425px){
 html, body{
 background-color: #ffffff !important;
@@ -152,8 +198,20 @@ background-color: #ffffff;
 .selling-price{
 	font-size: 20px;
 }
-#checkpoint-content{
-	font-size: 12px;
+#progress-bar{
+margin-left:0px;
+margin-right: 0px;
+}
+#qty-checkpoint{
+	margin-left:0px;
+	margin-bottom:0px;
+}
+#price-checkpoint{
+	margin-left:0px;
+	margin-bottom: 0px;
+}
+#checkpoint-num{
+	margin-left:10px;
 }
 .product-details{
 	padding: 5px;
@@ -194,6 +252,18 @@ background-color: #ffffff;
 }
 .selling-price{
 	font-size: 16px
+}
+#progress-bar{
+margin-left:0px;
+margin-right: 0px;
+}
+#qty-checkpoint{
+	margin-left:0px;
+	margin-bottom:0px;
+}
+#price-checkpoint{
+	margin-left:0px;
+	margin-bottom: 0px;
 }
 }
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
